--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div style="height:45px; align-items: center;display: grid">
 <h1 style="margin: initial">Arriving Flights</h1>
+
+<input style="font-family: inherit; font-size: inherit" type="time" min="00:00" max="23:59">
+
 </div> 
 
 <ag-grid-angular 
