Ranges and Timescale

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,76 @@
-<div style="height:45px; align-items: center;display: grid">
-<h1 style="margin: initial">Arriving Flights</h1>
+<div style="height:45px; align-items: center;display: flex; padding-left: 5px">
+  <h1 style="margin: initial">Arriving Flights</h1>
 
-<input style="font-family: inherit; font-size: inherit" type="time" min="00:00" max="23:59">
+  <div style="margin-left:100px;height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px"> 
+    <span style = "width:5px"> 
+        <span [ngClass] = "getRangeBulletClass()">&bull;</span>
+    </span>
+    <label>Date:</label>
+  <input class = "gridinput" [(ngModel)] = "rangeDate"  style="width:100px" type="date">
+  <label >From:</label>
+  <input [ngxTimepicker]="picker" [format]="24" class = "gridinput"  [(ngModel)]='rangeFrom'>
+  <ngx-material-timepicker #picker [ngxMaterialTimepickerTheme]="darkTheme"></ngx-material-timepicker>
+  <label >To:</label>
+ <input [ngxTimepicker]="picker2" [format]="24" class = "gridinput"  [(ngModel)]='rangeTo'>
+  <ngx-material-timepicker #picker2 [ngxMaterialTimepickerTheme]="darkTheme"></ngx-material-timepicker>
 
-</div> 
+  <button (click)="setSelectedRange()">Load</button>
 
-<ag-grid-angular 
-    #agGrid
-    style="width: 100%; height: calc(100vh - 65px);" 
-    id="myGrid"
-    class="ag-theme-balham-dark"
-    [rowData]="rowData" 
-    [sideBar]="sideBar"
-    [columnDefs]="columnDefs"
-    [defaultColDef]="defaultColDef"
-    [frameworkComponents]="frameworkComponents"
-    [animateRows]="true"
-    [enableSorting] = "true"
-    [getRowNodeId]="getRowNodeId"
-    [groupUseEntireRow]="true"
-    (gridReady)="onGridReady($event)"
-    >
-</ag-grid-angular>
-<div style="height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px" >STATUS: 
-    <span style="margin-left: 10px" [ngClass] = "status">{{status}}</span>
-    <span style="margin-left: 10px" >Update Mode:</span>
-    <span style="margin-left: 10px" [ngClass] = "updateMode">{{updateMode}}</span>
-    <span style="margin-left: 10px" >Last Update:</span>
-    <span style="margin-left: 10px;color:cadetblue">{{lastUpdate}}</span>
+  </div>
+
+  <div style="margin-left:20px;height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px">
+    <span style = "width:5px"> 
+    <span [ngClass] = "getOffsetBulletClass()">&bull;</span>
+    </span>
+    <label>Current Time</label>
+
+  <label >From:</label>
+  <select name="from" [(ngModel)]='offsetFrom'>
+    <option value="-240">-4 hours</option>
+    <option value="-180">-3 hours</option>
+    <option value="-120"selected="selected">-2 hours</option>
+    <option value="-60">-1 hour</option>
+    <option value="0">0 hour</option>
+    <option value="60">+1 hour</option>
+    <option value="120">+2 hour</option>
+    <option value="180">+3 hour</option>   
+
+  </select>
+  <label >To:</label>
+  <select name="to" [(ngModel)]='offsetTo' >
+    <option value="-180">-3 hours</option>
+    <option value="-120">-2 hours</option>
+    <option value="-60">-1 hour</option>
+    <option value="0">0 hour</option>
+    <option value="60">+1 hour</option>
+    <option value="120">+2 hour</option>
+    <option value="180" selected="selected">+3 hour</option>   
+    <option value="240">+4 hour</option>
+    <option value="300">+5 hour</option>
+  </select>
+
+  <button (click)="setCurrentRange()">Load</button>
+
+  </div>
+
+  <div style="margin-left:20px;height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px"> 
+    <label>Timescale Zoom:</label>
+  <button (click)="zoom(-1)" style='font-size: 12px'>-</button>
+  <button (click)="zoom(1)" style='font-size: 12px'>+</button>
+
+  </div>
 </div>
 
+
+<ag-grid-angular #agGrid style="width: 100%; height: calc(100vh - 65px);" id="myGrid" class="ag-theme-balham-dark"
+  [rowData]="rowData" [sideBar]="sideBar" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
+  [frameworkComponents]="frameworkComponents" [animateRows]="true" [enableSorting]="true" [getRowNodeId]="getRowNodeId"
+  [groupUseEntireRow]="true" (gridReady)="onGridReady($event)">
+</ag-grid-angular>
+<div style="height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px">STATUS:
+  <span style="margin-left: 10px" [ngClass]="status">{{status}}</span>
+  <span style="margin-left: 10px">Update Mode:</span>
+  <span style="margin-left: 10px" [ngClass]="updateMode">{{updateMode}}</span>
+  <span style="margin-left: 10px">Last Update:</span>
+  <span style="margin-left: 10px;color:cadetblue">{{lastUpdate}}</span>
+</div>
