--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,17 @@
 <div style="height:45px; align-items: center;display: flex; padding-left: 5px">
-  <h1 style="margin: initial">Arriving Flights</h1>
+  <h1 style="margin: initial">{{title}}</h1>
 
-  <div style="margin-left:100px;height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px">
+
+  <div style="margin-left:20px;height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px">
+
+    <select name="displayMode" [(ngModel)]='globals.displayMode' (ngModelChange) = "displayModeChangeCallback()">
+      <option value="ARR">Arrivals</option>
+      <option value="DEP">Departures</option>
+      <option value="BOTH">Arr & Dep</option>
+      </select>
+  </div>
+
+  <div  *ngIf = 'showDateRange' style="margin-left:20px;height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px">
     <span style="width:5px">
       <span [ngClass]="getRangeBulletClass()">&bull;</span>
     </span>
@@ -53,7 +63,8 @@
 
   </div>
 
-  <div style="margin-left:20px;height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px">
+
+  <div *ngIf = 'globals.displayMode == "ARR"' style="margin-left:20px;height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px">
     <input type="checkbox"  [(ngModel)]="showOnBlocks" (change) = "changeOnBlocks()" style='font-size: 9px; width:10px'/><label style="margin-left: 5px">Show On Blocks</label>
  </div>
 
@@ -81,4 +92,5 @@
   <span style="margin-left: 10px; font-size: 11px" [ngClass]="updateMode">{{updateMode}}</span>
   <span style="margin-left: 10px; font-size: 11px">Last Update:</span>
   <span style="margin-left: 10px; font-size: 11px;color:cadetblue">{{lastUpdate}}</span>
-</div>
+  <span style="margin-left: 10px; font-size: 11px">Rows:</span>
+  <span style="margin-left: 10px; font-size: 11px;color:cadetblue">{{numRows}}</span></div>
