--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,8 +70,8 @@
 
   <div style="margin-left:20px;height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px">
     <label>Timescale Zoom:</label>
-    <button (click)="zoom(-1)" style='font-size: 9px; width:20px'>&lt;&lt;</button>
-    <button (click)="zoom(1)" style='font-size: 9px; width:20px'>&gt;&gt;</button>
+    <button (click)="zoom(-1)" style='font-size: 9px; width:20px; cursor: zoom-out;'>&lt;&lt;</button>
+    <button (click)="zoom(1)" style='font-size: 9px; width:20px; cursor: zoom-in;'>&gt;&gt;</button>
   </div>
 
   <div style="margin-left:20px;height:20px;align-items: center;display: flex; flex-direction: row;padding-left: 10px">
