--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 @import "~ag-grid-community/dist/styles/ag-grid.css";
 @import "~ag-grid-community/dist/styles/ag-theme-balham-dark.css";
 
+button {
+    cursor: pointer;
+}
+
