--- a/src/app/components/gantt-item/gantt-item.component.scss
+++ b/src/app/components/gantt-item/gantt-item.component.scss
@@ -27,6 +27,12 @@
     height: 17px;
     top: 3px;
    } 
+   .invisible {
+     display:none;
+   }
+   .visible {
+    display:block;
+  }
   .SH {
     background-color: blueviolet
   }
